--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -813,15 +813,6 @@
 "_comment": " [CATEGORY]: GUI - NAMES",
 
 
-"_comment": " [CATEGORY]: FOODS - NAMES",
-
-	"mmorpg.buff_consumption.meal": "Meal",
-	"mmorpg.buff_consumption.potion": "Potion",
-	"mmorpg.buff_consumption.seafood": "Seafood",
-
-"_comment": " [CATEGORY]: FOODS - NAMES",
-
-
 "_comment": " [CATEGORY]: RUNE WORDS - NAMES",
 
 	"mmorpg.runeword.abyssal_depths": "Abyssal Depths",
@@ -832,6 +823,15 @@
 	"mmorpg.runeword.the_novice": "The Novice",
 
 "_comment": " [CATEGORY]: RUNE WORDS - NAMES",
+
+
+"_comment": " [CATEGORY]: FOODS - NAMES",
+
+	"mmorpg.buff_consumption.meal": "Meal",
+	"mmorpg.buff_consumption.potion": "Potion",
+	"mmorpg.buff_consumption.seafood": "Seafood",
+
+"_comment": " [CATEGORY]: FOODS - NAMES",
 
 
 "_comment": " [CATEGORY]: RARITIES - NAMES",
@@ -853,52 +853,6 @@
 	"mmorpg.rarity..unique": "Unique",
 
 "_comment": " [CATEGORY]: RARITIES - NAMES",
-
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
@@ -935,6 +889,52 @@
 	"mmorpg.effect.wounds": "Wounds",
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
+
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -1454,7 +1454,7 @@
 	"mmorpg.stat.fire_cdr": "Fire Spell Cooldown Reduction",
 	"mmorpg.stat.fire_crit_taken": "Fire Crit DMG Taken",
 	"mmorpg.stat.fire_damage_aura_cost": "\u00A77Fire Damage Cost",
-	"mmorpg.stat.fire_dmg_when_target_low_hp": "\u00A77Execute targets bellow 30% health, dealing \u00A7a[VAL1]\u00A77% increased  \u00A7c\u2600 Fire\u00A77",
+	"mmorpg.stat.fire_dmg_when_target_low_hp": "\u00A77Execute targets below 30% health, dealing \u00A7a[VAL1]\u00A77% increased  \u00A7c\u2600 Fire\u00A77",
 	"mmorpg.stat.fire_dot_damage": "Fire Damage Over Time",
 	"mmorpg.stat.fire_focus": "Fire Focus",
 	"mmorpg.stat.fire_health_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A7c\u2600 Fire\u00A77 Damage as Health",
@@ -1647,7 +1647,7 @@
 	"mmorpg.stat.lightning_cdr": "Lightning Spell Cooldown Reduction",
 	"mmorpg.stat.lightning_crit_taken": "Lightning Crit DMG Taken",
 	"mmorpg.stat.lightning_damage_aura_cost": "\u00A77Lightning Damage Cost",
-	"mmorpg.stat.lightning_dmg_when_target_low_hp": "\u00A77Execute targets bellow 30% health, dealing \u00A7a[VAL1]\u00A77% increased  \u00A7e\u2600 Lightning\u00A77",
+	"mmorpg.stat.lightning_dmg_when_target_low_hp": "\u00A77Execute targets below 30% health, dealing \u00A7a[VAL1]\u00A77% increased  \u00A7e\u2600 Lightning\u00A77",
 	"mmorpg.stat.lightning_dot_damage": "Lightning Damage Over Time",
 	"mmorpg.stat.lightning_focus": "Lightning Focus",
 	"mmorpg.stat.lightning_health_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A7e\u2600 Lightning\u00A77 Damage as Health",
@@ -1868,7 +1868,7 @@
 	"mmorpg.stat.unknown": "Unknown Stat",
 	"mmorpg.stat.water_any_wep_damage": "Cold Weapon Damage",
 	"mmorpg.stat.water_crit_taken": "Cold Crit DMG Taken",
-	"mmorpg.stat.water_dmg_when_target_low_hp": "\u00A77Execute targets bellow 30% health, dealing \u00A7a[VAL1]\u00A77% increased  \u00A7b\u2600 Cold\u00A77",
+	"mmorpg.stat.water_dmg_when_target_low_hp": "\u00A77Execute targets below 30% health, dealing \u00A7a[VAL1]\u00A77% increased  \u00A7b\u2600 Cold\u00A77",
 	"mmorpg.stat.water_dot_damage": "Cold Damage Over Time",
 	"mmorpg.stat.water_focus": "Cold Focus",
 	"mmorpg.stat.water_health_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A7b\u2600 Cold\u00A77 Damage as Health",
@@ -1901,46 +1901,6 @@
 	"mmorpg.formatter.special_unique_process": "%1$s %2$s",
 
 "_comment": " [CATEGORY]: FORMATTER - NAMES",
-
-
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
-
-	"mmorpg.gear_type.bow": "Bow",
-	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
-	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
-	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
-	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
-	"mmorpg.gear_type.crossbow": "Crossbow",
-	"mmorpg.gear_type.leather_boots": "Leather Boots",
-	"mmorpg.gear_type.leather_chest": "Leather Chest",
-	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
-	"mmorpg.gear_type.leather_pants": "Leather Pants",
-	"mmorpg.gear_type.necklace": "Necklace",
-	"mmorpg.gear_type.plate_boots": "Plate Boots",
-	"mmorpg.gear_type.plate_chest": "Plate Chest",
-	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
-	"mmorpg.gear_type.plate_pants": "Plate Pants",
-	"mmorpg.gear_type.ring": "Ring",
-	"mmorpg.gear_type.shield": "Tower Shield",
-	"mmorpg.gear_type.staff": "Staff",
-	"mmorpg.gear_type.sword": "Sword",
-	"mmorpg.gear_type.tome": "Tome",
-	"mmorpg.gear_type.totem": "Totem",
-	"mmorpg.gearslot.boots": "Boots",
-	"mmorpg.gearslot.bow": "Bow",
-	"mmorpg.gearslot.chest": "Chest",
-	"mmorpg.gearslot.crossbow": "Crossbow",
-	"mmorpg.gearslot.helmet": "Helmet",
-	"mmorpg.gearslot.necklace": "Necklace",
-	"mmorpg.gearslot.pants": "Pants",
-	"mmorpg.gearslot.ring": "Ring",
-	"mmorpg.gearslot.shield": "Shield",
-	"mmorpg.gearslot.staff": "Staff",
-	"mmorpg.gearslot.sword": "Sword",
-	"mmorpg.gearslot.tome": "Tome",
-	"mmorpg.gearslot.totem": "Totem",
-
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
 
 
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
@@ -1992,6 +1952,46 @@
 	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
 
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
+
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+	"mmorpg.gear_type.bow": "Bow",
+	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
+	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
+	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
+	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
+	"mmorpg.gear_type.crossbow": "Crossbow",
+	"mmorpg.gear_type.leather_boots": "Leather Boots",
+	"mmorpg.gear_type.leather_chest": "Leather Chest",
+	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
+	"mmorpg.gear_type.leather_pants": "Leather Pants",
+	"mmorpg.gear_type.necklace": "Necklace",
+	"mmorpg.gear_type.plate_boots": "Plate Boots",
+	"mmorpg.gear_type.plate_chest": "Plate Chest",
+	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
+	"mmorpg.gear_type.plate_pants": "Plate Pants",
+	"mmorpg.gear_type.ring": "Ring",
+	"mmorpg.gear_type.shield": "Tower Shield",
+	"mmorpg.gear_type.staff": "Staff",
+	"mmorpg.gear_type.sword": "Sword",
+	"mmorpg.gear_type.tome": "Tome",
+	"mmorpg.gear_type.totem": "Totem",
+	"mmorpg.gearslot.boots": "Boots",
+	"mmorpg.gearslot.bow": "Bow",
+	"mmorpg.gearslot.chest": "Chest",
+	"mmorpg.gearslot.crossbow": "Crossbow",
+	"mmorpg.gearslot.helmet": "Helmet",
+	"mmorpg.gearslot.necklace": "Necklace",
+	"mmorpg.gearslot.pants": "Pants",
+	"mmorpg.gearslot.ring": "Ring",
+	"mmorpg.gearslot.shield": "Shield",
+	"mmorpg.gearslot.staff": "Staff",
+	"mmorpg.gearslot.sword": "Sword",
+	"mmorpg.gearslot.tome": "Tome",
+	"mmorpg.gearslot.totem": "Totem",
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
@@ -2251,7 +2251,7 @@
 	"mmorpg.stat_desc.aura_effect": "Increases stats your auras give you by %",
 	"mmorpg.stat_desc.axe_damage": "Increases damage done if it was caused by that weapon",
 	"mmorpg.stat_desc.beast_cdr": "Reduces spell cooldown of spells with the tag.",
-	"mmorpg.stat_desc.bleed_chance": "Chance to Cause the Ailment on hit. Maximum is 100%, Ailment strength is affected by the total damage dealt and all ailments accumulate, some may have caps.",
+	"mmorpg.stat_desc.bleed_chance": "Chance to Cause the Ailment on hit. Maximum chance is 100%. Deals 75% of the damage as \u00A76\u2600 Physical\u00A77 Damage for 5s.",
 	"mmorpg.stat_desc.bleed_damage": "Increases damage the ailment deals.",
 	"mmorpg.stat_desc.bleed_duration": "Increases duration. For DOTs, this does increase the total damage dealt, but it doesn't increase damage per second.",
 	"mmorpg.stat_desc.bleed_proc_chance": "Procs the accumulated damage of the ailment",
@@ -2263,7 +2263,7 @@
 	"mmorpg.stat_desc.bonus_phys_to_ele": "Grants % of physical attack damage as extra elemental damage",
 	"mmorpg.stat_desc.bow_damage": "Increases damage done if it was caused by that weapon",
 	"mmorpg.stat_desc.buff_cdr": "Reduces spell cooldown of spells with the tag.",
-	"mmorpg.stat_desc.burn_chance": "Chance to Cause the Ailment on hit. Maximum is 100%, Ailment strength is affected by the total damage dealt and all ailments accumulate, some may have caps.",
+	"mmorpg.stat_desc.burn_chance": "Chance to Cause the Ailment on hit. Maximum chance is 100%. Deals 75% of the damage as \u00A7c\u2600 Fire\u00A77 Damage for 3s.",
 	"mmorpg.stat_desc.burn_damage": "Increases damage the ailment deals.",
 	"mmorpg.stat_desc.burn_duration": "Increases duration. For DOTs, this does increase the total damage dealt, but it doesn't increase damage per second.",
 	"mmorpg.stat_desc.burn_proc_chance": "Procs the accumulated damage of the ailment",
@@ -2313,7 +2313,7 @@
 	"mmorpg.stat_desc.ele_staff_damage": "Increases elemental damage done if it was caused by that weapon",
 	"mmorpg.stat_desc.ele_sword_damage": "Increases elemental damage done if it was caused by that weapon",
 	"mmorpg.stat_desc.ele_trident_damage": "Increases elemental damage done if it was caused by that weapon",
-	"mmorpg.stat_desc.electrify_chance": "Chance to Cause the Ailment on hit. Maximum is 100%, Ailment strength is affected by the total damage dealt and all ailments accumulate, some may have caps.",
+	"mmorpg.stat_desc.electrify_chance": "Chance to Cause the Ailment on hit. Maximum chance is 100%. Accumulates 125% of the damage which can be activated with SHOCK to deal bonus \u00A7e\u2600 Lightning\u00A77 Damage",
 	"mmorpg.stat_desc.electrify_damage": "Increases damage the ailment deals.",
 	"mmorpg.stat_desc.electrify_duration": "Increases duration. For DOTs, this does increase the total damage dealt, but it doesn't increase damage per second.",
 	"mmorpg.stat_desc.electrify_proc_chance": "Procs the accumulated damage of the ailment",
@@ -2354,7 +2354,7 @@
 	"mmorpg.stat_desc.fishing_medium_drop_bonus": "Prof drops are split into categories, this stat increases the droprate of one such",
 	"mmorpg.stat_desc.fishing_misc_drop_bonus": "Prof drops are split into categories, this stat increases the droprate of one such",
 	"mmorpg.stat_desc.fishing_triple_drop": "Chance for profession to triple the drop, if it happens",
-	"mmorpg.stat_desc.freeze_chance": "Chance to Cause the Ailment on hit. Maximum is 100%, Ailment strength is affected by the total damage dealt and all ailments accumulate, some may have caps.",
+	"mmorpg.stat_desc.freeze_chance": "Chance to Cause the Ailment on hit. Maximum chance is 100%. Slows Enemy and Accumulates 100% of the damage which can be activated with SHATTER to deal bonus \u00A7b\u2600 Cold\u00A77 Damage",
 	"mmorpg.stat_desc.freeze_damage": "Increases damage the ailment deals.",
 	"mmorpg.stat_desc.freeze_duration": "Increases duration. For DOTs, this does increase the total damage dealt, but it doesn't increase damage per second.",
 	"mmorpg.stat_desc.freeze_proc_chance": "Procs the accumulated damage of the ailment",
@@ -2447,7 +2447,7 @@
 	"mmorpg.stat_desc.physical_crit_taken": "If Critical of that element, multiply by x",
 	"mmorpg.stat_desc.physical_dot_damage": "Fire damage over time increases damage of burn, for example.",
 	"mmorpg.stat_desc.piercing_projectiles": "Makes spell pierce enemies and keep on",
-	"mmorpg.stat_desc.poison_chance": "Chance to Cause the Ailment on hit. Maximum is 100%, Ailment strength is affected by the total damage dealt and all ailments accumulate, some may have caps.",
+	"mmorpg.stat_desc.poison_chance": "Chance to Cause the Ailment on hit. Maximum chance is 100%. Deals 100% of the damage as \u00A75\u2600 Chaos\u00A77 Damage for 10s.",
 	"mmorpg.stat_desc.poison_damage": "Increases damage the ailment deals.",
 	"mmorpg.stat_desc.poison_duration": "Increases duration. For DOTs, this does increase the total damage dealt, but it doesn't increase damage per second.",
 	"mmorpg.stat_desc.poison_proc_chance": "Procs the accumulated damage of the ailment",
