--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -39,3 +39,4 @@ v.5.3.16
 - blocking with shield now stops energy regen
 - you cant block with 0 energy now. Your items will be put on short cooldown and your shield block disabled
 - added GivePerLvlExp command
+- added seconds tooltip to effect
