--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -59,3 +59,8 @@ v.5.3.19
 - summons are now despawn checked every 30s in case people find ways to cheese the cap
 - fix map stat bugs: tier stats, player/mob map stats
 - mobs now properly get 100% of their phys dmg as bonus ele dmg of all types combined (this is a config)
+
+v5.3.20
+- hp regen will now happen always, even at full hp.. to fix blood mage
+- fix summons not working without having a + summons stat
+- terrain now generates far away in maps, but mobs only gen when close by
