--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -64,3 +64,6 @@ v5.3.20
 - hp regen will now happen always, even at full hp.. to fix blood mage
 - fix summons not working without having a + summons stat
 - terrain now generates far away in maps, but mobs only gen when close by
+
+v.5.3.21
+- more fixes
